--- a/style.css
+++ b/style.css
@@ -96,17 +96,21 @@ ul li a:hover {
   background-color:#292F36;
 }
 
+/* Section Container */
+
 .section__about {
-  padding: 50px;
   color: #ffffff;
   background-color: #d7d7d7;
+  padding:50px;
 }
 
-.section__about h1 {
+.section__about h1,
+.section__skills h1,
+.section_experiences h1 {
   text-align: center;
-  padding:10px;
   font-size: 50px;
   color: rgb(43, 39, 39);
+  margin-bottom: 20px;
 }
 
 .section__about h2 {
@@ -119,14 +123,40 @@ ul li a:hover {
   font-size: 20px;
   padding: 20px;
   color: #6b7280;
+  margin-left:10px;
 }
 
-.section__skills h1 {
-  margin-top: 50px;
-  text-align: center;
-  padding:10px;
-  font-size: 50px;
-  color: rgb(43, 39, 39);
+.section__hobbies h2 {
+  padding: 0px;
+  margin-bottom: 30px;
+}
+
+.section__hobbies p {
+  font-size: 20px;
+  color: #6b7280;
+  padding: 0;
+  margin-left: 30px;
+}
+
+.mini_hobbies {
+    display: flex;            
+    flex-direction: row;      
+    justify-content: flex-start; 
+    gap: 20px;
+    margin-left: 30px;         
+}
+
+.mini_hobbies p {
+    display: flex;
+    align-items: center;       
+    gap: 8px;                 
+    margin: 0;         
+}
+
+/* Skills Section */
+
+.section__skills{
+  padding: 50px;
 }
 
 .section__skills p {
@@ -136,38 +166,114 @@ ul li a:hover {
   margin-left: 40px;
 }
 
-.container__skills {
-  width:500px;
-  border: 2px solid #6b7280; 
-  border-radius: 20px;  
-  margin: 20px;
-  margin-left: 70px;
-  padding: 10px;
-}
-
-.container__skills h3 {
-  text-align: center;
-  color:#58545b;
-  padding:5px;
-
-}
-
-.mini__skills {
+.skills__wrapper {
   display: flex;
-  flex-wrap: wrap;       
-  gap: 10px;           
-  max-width: 400px;
-  padding: 5px;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+
+.front__skills,
+.back__skills,
+.data__skills {
+  width: 500px;
+  border: 2px solid #6b7280;
+  border-radius: 20px;
+  padding: 10px 15px;
+  margin: 10px;
+}
+
+
+.front__skills h3,
+.back__skills h3,
+.data__skills h3 {
+  text-align: center;
+  color: #58545b;
+  margin-bottom: 10px;
+}
+
+.f__skills,
+.b__skills,
+.v__skills{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   justify-content: center;
   margin: 0 auto;
 }
 
-.mini__skills p {
+.f__skills p,
+.b__skills p,
+.v__skills p {
   margin: 0;
-  padding: 5px 10px;
+  padding: 5px 12px;
   background-color: #f0f0f0;
-  border-radius: 5px;
+  border-radius: 10px;
+}
+
+/* Experiences */
+
+.section_experiences {
+    margin-top: 20px;
+    background-color: #ecedef;
+    padding: 50px;
+}
+
+.row.experience {
+  display: flex;
+  gap: 30px;
+  margin-bottom: 50px;
+  align-items: flex-start; 
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.research_left,
+.data_left,
+.product_left {
+  display: flex;          
+  flex-direction: column; 
+  align-items: center;     
+  text-align: center;      
+  max-width: 250px;
+  margin-left: 60px;
+}
+
+.research_left img,
+.data_left img,
+.product_left img {
+  width: 100%;
+  max-width: 120px;
+  border-radius: 8px;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.research_left h2,
+.data_left h2,
+.product_left h2,
+.research_left h4,
+.data_left h4,
+.product_left h4 {
+  margin: 5px 0;
+  color: #4b505b;
+}
+
+.research_right,
+.data_right,
+.product_right {
+  flex: 1; 
+  line-height: 1.6;
+  max-width:900px;
+}
+
+.research_right p,
+.data_right p,
+.product_right p {
+    font-size: 20px;
+    color: #58545b;
+
 }
 
 .images__row{
@@ -248,16 +354,6 @@ ul li a:hover {
 
 .social-icons a:hover {
   color: rgb(111, 111, 111); 
-}
-
-
-.hire__me {
-  background-color: var(--primary-color);
-  color: #ffffff;
-}
-
-.hire__me:hover {
-  background-color: var(--primary-color-dark);
 }
 
 .portfolio {
