--- a/style.css
+++ b/style.css
@@ -593,7 +593,7 @@ ul li a:hover {
 
 }
 
-  @media (min-width: 320px) and (max-width: 750px) {
+  @media (min-width: 375px) and (max-width: 750px) {
 
   nav ul {
     display: none;
@@ -644,7 +644,7 @@ ul li a:hover {
     flex-direction: column;
   }
 
-  .section__hobbies p {
+  .mini_hobbies {
     display: flex;
     flex-direction: column;
   }
