--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@ nav .checkbox {
   display: none;
 }
 
-
-
 .nav__content {
   max-width: var(--max-width);
   margin: auto;
@@ -557,12 +555,6 @@ ul li a:hover {
     gap: 15px;
   }
 
-  
-  .mini_hobbies {
-    display: flex;
-    flex-direction: column;
-  }
-
   .project img,
   .button__1,
   .button__2 {
@@ -733,15 +725,26 @@ ul li a:hover {
       display: none;
     }
 
-    .images__row {
-      flex-direction: column;
-      align-items: center;
-      gap: 15px;
-    }
+  .images__row {
+    flex-direction: row; 
+    align-items: flex-start;
+  }
+  .image img {
+    min-width: 400px;
+    margin-top: -30px;
+    
+  }
+  .content {
+    align-items: flex-start;
+    justify-content: flex-start; 
+    padding: 50px;
+    margin-left: 20%;
+  }
 
-    .images__row > div {
-      width: 50%;
-    }
+  .content p,
+  .title{
+    text-align: left;
+  }
 
     .__portfolio {
       grid-template-columns: 2fr 1fr 1fr;
@@ -754,10 +757,5 @@ ul li a:hover {
       margin: 0;
       text-align: left;
       gap: 30px;
-    }
-
-    .content {
-      flex-direction: left;
-      align-items: left;
     }
   }
