--- a/style.css
+++ b/style.css
@@ -119,8 +119,7 @@ ul li a:hover {
 .section__about h1,
 .section__skills h1,
 .section_experiences h1,
-.section__portfolio h1,
-.section__contacts h1 {
+.section_portfolio h1 {
   text-align: center;
   font-size: 40px;
   color: rgb(43, 39, 39);
@@ -302,112 +301,104 @@ ul li a:hover {
 
 /* Portfolio */
 
-.section__portfolio {
-  padding: 40px;
+#portfolio {
+  padding:50px;
+  background-color: #393939;
 }
 
-.__portfolio {
-  display: grid;
-  grid-template-columns: 1fr 1fr;   
-  grid-template-rows: auto auto;   
-  gap: 20px;
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px;
-}
-
-.project:nth-child(1) {
-  grid-column: 1 / 3; 
-  grid-row: 1;
-  min-height: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; 
-  gap: 10px;
-}
-
-
-.project:nth-child(2) {
-  grid-column: 1;
-  grid-row: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; 
-  
-}
-
-.project:nth-child(3) {
-  grid-column: 2;
-  grid-row: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; 
-}
-
-.project{
-  display: flex;
-  flex-direction: column; 
-  justify-content: space-between;
-  border-style: solid;
-  border-color: #292F36;
-  padding: 10px;
-  border-radius: 10px;
-  background-color:#d7d7d7;
-}
-
-.project img {
-  max-width: 200px;
-  height: auto;
-  border-radius: 10px;
-  margin-bottom: 15px;
-}
-
-.project h3{
- margin-bottom: 10px;
- color: #4b505b;
- text-align: center;
-}
-
-.project p{
-  color:#4b505b;
-  margin-bottom: 10px;
-  font-size: 13px;
+.section_portfolio h1 {
   text-align: center;
-  flex-grow: 1;
+  font-size: 40px;
+  color: white;
+  margin-bottom: 20px; 
 }
 
-.project button, 
-.project a {
-  align-self: center; 
-  margin-top: auto;  
+.container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+  gap: 30px;              
+  padding: 50px;         
+  justify-items: center;
 }
 
-.project h3,
-.project p {
-  margin: 0.5rem 0;
+.card{
+  display: flex;
+  flex-direction: column;         
+  max-width: 400px;      
+  height: 450px;         
+  border: 2px solid #696969;
+  border-radius: 10px;
+  overflow: hidden;       
+}
+
+.half-card{
+  width: 100%;
+  height: 200px;
+  background-color: #696969;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  padding: 20px;
+  overflow: hidden;
+}
+
+.card-content {
+  padding: 20px;
+  margin-top: 0;  
+}
+
+.card-content h3{
+  text-align: left;
+  color: white;
+  font-size: 20px;
+  font-weight:bold;
+  padding:10px;
+}
+
+.card-content p{
+  text-align: left;
+  color: white;
+  font-size: 15px;
+  padding:10px;
+}
+
+.mini-cards p {
+  font-size: 10px;
+  padding: 6px 10px;
+  margin: 0;               
+  border: 1px solid #696969;
+  border-radius: 999px;     
+  color: white;
+  background-color:#696969;
+  justify-content: flex-start;
+  display: inline-flex;     
+  white-space: nowrap;
+}
+
+.mini-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: flex-start;
+  padding-bottom: 10px;
 }
 
 .button {
-  margin-top: auto;
-  background-color: #30373e;
-  color: white;
-  width: 200px;
-  height: 40px;
-  font-family: "Poppins", sans-serif;
-  border-radius: 10px;
-  border: none;
-  cursor: pointer;
+  font-family: "Poppins", sans-serif;  
+  background-color: #272c31;           
+  color: white;                        
+  padding: 10px 10px;                 
+  border: none;                        
+  border-radius: 10px;                 
+  cursor: pointer;                      
   transition: background-color 0.3s ease;
 }
 
 .button:hover {
-  background-color: #6b7280;
+  background-color: #6b7280;            
 }
-
 .images__row{
   display:flex;
   justify-content: center;
@@ -429,7 +420,7 @@ ul li a:hover {
   display: block;             
   border-radius: 10px;
   border-style: solid;
-  border-color: #6b7280;    
+  border-color:  #696969    
 }
 
 .images__txt {
