--- a/style.css
+++ b/style.css
@@ -302,7 +302,8 @@ ul li a:hover {
 /* Portfolio */
 
 #portfolio {
-  padding:50px;
+  padding: 70px;
+  scroll-margin-top: 50px; 
   background-color: #393939;
 }
 
@@ -313,40 +314,38 @@ ul li a:hover {
   margin-bottom: 20px; 
 }
 
-.container{
+.container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-  gap: 30px;              
-  padding: 50px;         
-  justify-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 30px;
+  padding: 50px;
 }
 
-.card{
+.card {
   display: flex;
-  flex-direction: column;         
-  max-width: 400px;      
-  height: 450px;         
+  flex-direction: column;
+  width: 100%;
+  height: 250px;
   border: 2px solid #696969;
   border-radius: 10px;
-  overflow: hidden;       
+  overflow: hidden;
 }
 
-.half-card{
-  width: 100%;
-  height: 200px;
+.half-card {
+  height: 50px;
   background-color: #696969;
   color: white;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  box-sizing: border-box;
   padding: 20px;
   overflow: hidden;
 }
 
+
 .card-content {
   padding: 20px;
   margin-top: 0;  
+  flex-grow: 1;
 }
 
 .card-content h3{
@@ -394,6 +393,7 @@ ul li a:hover {
   border-radius: 10px;                 
   cursor: pointer;                      
   transition: background-color 0.3s ease;
+  margin-top: auto;
 }
 
 .button:hover {
@@ -546,38 +546,29 @@ ul li a:hover {
     gap: 15px;
   }
 
-  .project img,
-  .button__1,
-  .button__2 {
-    width: 90%;
-  }
 
-  .__portfolio {
+  .container{
     display: grid;
-    grid-template-columns: 1fr; 
-    grid-template-rows: auto;
+    grid-template-columns: 1fr;
     gap: 15px;
     padding: 10px;
-    margin-right: auto;          
-    margin-left: auto;
+    width: 100%;
+    height: 100%;
   }
 
-  .project {
+
+  .card{
+    display: flex;
+    flex-direction: column;
     width: 100%;
     max-width: 100%;
-    align-items: center;
+    height: 100%;
+    margin: 0;
+    align-items: stretch; 
   }
 
-  .project:nth-child(1),
-  .project:nth-child(2),
-  .project:nth-child(3),
-  .project:nth-child(4),
-  .project:nth-child(5) {
-    grid-column: auto !important;
-    grid-row: auto !important;
-    min-width: auto !important;
-    max-height: none !important;
-    margin: 10px 0 !important;
+  .button {
+    flex-direction: column;
   }
 
 }
@@ -608,10 +599,6 @@ ul li a:hover {
     display:none;
   }
 
-  .image {
-    padding-top:150px;
-  }
-
   .section__container {
     grid-template-columns: 1fr; 
     gap: 2rem;
@@ -626,6 +613,8 @@ ul li a:hover {
     width: 70%; 
     max-width: 300px;
     height: auto;
+    padding: 0;
+    margin: 0;
   }
 
   .section__hobbies {
@@ -648,39 +637,6 @@ ul li a:hover {
     gap: 15px;
   }
 
-  .__portfolio {
-    display: grid;
-    grid-template-columns: 1fr; 
-    grid-template-rows: auto;
-    gap: 15px;
-    padding: 10px;
-    margin-right: auto;          
-    margin-left: auto;
-  }
-
-  .project {
-    width: 100%;
-    max-width: 100%;
-    align-items: center;
-  }
-
-  .project:nth-child(1),
-  .project:nth-child(2),
-  .project:nth-child(3),
-  .project:nth-child(4),
-  .project:nth-child(5) {
-    grid-column: auto !important;
-    grid-row: auto !important;
-    min-width: auto !important;
-    max-height: none !important;
-    margin: 10px 0 !important;
-  }
-
-  .button__1,
-  .button__2 {
-    width: 80%;
-  }
-
   .image {
     grid-area: 1/1/2/2;
   }
@@ -695,62 +651,94 @@ ul li a:hover {
     gap: 15px;
   }
 
-  .content {
+  .container {
     margin: auto;
+  }
+
+  .button{
+    flex-direction: column;
+    margin-top: auto;
   }
 }
 
-  @media (min-width: 756px) {
-    nav ul {
-      display: flex;
-      flex-direction: row;
-      position: static;
-      width: auto;
-      height: auto;
-      padding: 0;
-      background: none;
-      gap: 1rem;
-    }
+  @media (min-width: 756px) and (max-width:800px) {
 
-    .checkbox {
-      display: none;
-    }
-
-  .image-row img {
-    flex: 1 0 30%;
-    max-width: 30%;
+  nav ul {
+    display: flex;             
+    flex-direction: row;         
+    justify-content: flex-end;  
+    position: static;           
+    width: auto;
+    background-color: transparent;
+    padding: 0;
   }
+
+  .image{
+    padding-bottom: 200px;
+  }
+
   .image img {
-    min-width: 400px;
-    margin-top: -30px;
-    
-  }
-  .content {
-    align-items: flex-start;
-    justify-content: flex-start; 
-    padding: 50px;
-    margin-left: 20%;
+    width: 350px;     
+    max-width: 100%;  
+    height: auto;    
+    display: block;
   }
 
-  .content p,
-  .title{
+  .section__hobbies{
+    flex-direction: row;
+    align-items: flex-start;
+    margin: 0;
+    text-align: left;
+    gap: 30px;
+  }
+
+  .container {
+  grid-template-columns: 1fr;
+  padding: 20px;
+  }
+
+  .button{
+    flex-direction: column;
+    margin-top: auto;
+  }
+
+  }
+
+ @media (min-width:800px) {
+
+  nav ul {
+    display: flex;             
+    flex-direction: row;         
+    justify-content: flex-end;  
+    position: static;           
+    width: auto;
+    background-color: transparent;
+    padding: 0;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; 
+    align-items: flex-start;   
+    gap: 15px;
+    width: 550px;
+  }
+
+  .content p{
     text-align: left;
   }
 
-    .__portfolio {
-      grid-template-columns: 2fr 1fr 1fr;
-    }
-
-    .section__hobbies{
-      flex-direction: row;
-      align-items: flex-start;
-      margin: 0;
-      text-align: left;
-      gap: 30px;
-    }
+  .image{
+    padding-bottom: 200px;
   }
 
- @media screen and (min-width:900px) {
+  .image img {
+    width: 350px;     
+    max-width: 100%;  
+    height: auto;    
+    display: block;
+  }
 
   .images__row{
     flex-wrap: wrap;
@@ -763,5 +751,17 @@ ul li a:hover {
   .image-row img {
     flex: 1 1 30%;
     max-width: 30%;
+  }
+  
+  .container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
+    flex-direction: column;
+  }
+
+  .button{
+    flex-direction: column;
+    margin-top: auto;
   }
  }
