--- a/style.css
+++ b/style.css
@@ -314,6 +314,43 @@ ul li a:hover {
   margin-bottom: 20px; 
 }
 
+.filter p{
+  font-family: "Poppins", sans-serif;
+  color: white;
+}
+
+.filter-buttons{
+  display: flex;          
+  justify-content: auto; 
+  flex-wrap: wrap;       
+  gap: 15px;              
+  padding: 10px;
+}
+
+.filter-btn{
+  font-family: "Poppins", sans-serif;  
+  background-color: #5b6770;           
+  color: white;                        
+  padding: 8px 20px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.filter-btn.active {
+  background: #333;
+  color: white;
+}
+
+.card {
+  transition: all 0.4s ease;
+}
+
+.card.hide {
+  display: none; 
+}
+
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -651,6 +688,25 @@ ul li a:hover {
     gap: 15px;
   }
 
+  .filter p{
+    display: flex;
+    flex-direction: column;
+    text-align:center;
+    margin-bottom: 5px;
+  }
+  
+  .filter-buttons{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .filter-btn{
+    padding: 10px;
+    gap: 10px;
+  }
+
   .container {
     margin: auto;
   }
@@ -692,9 +748,19 @@ ul li a:hover {
     gap: 30px;
   }
 
+  .filter p{
+    display: flex;
+    margin-bottom: 10px;
+  }
+
+  .filter-buttons{
+    align-items: center;
+    gap: 15px;
+  }
+
   .container {
-  grid-template-columns: 1fr;
-  padding: 20px;
+    grid-template-columns: 1fr;
+    padding: 20px;
   }
 
   .button{
